<resources>
    <string name="app_name">SeriatorNet</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->


    <!-- Main Menu -->
    <string name="upcoming">Próximos</string>
    <string name="search">Buscar</string>
    <string name="shows">Series</string>
    <string name="profile">Perfil</string>
    <string name="title_activity_register">Registro</string>

    <!-- Welcome -->
    <string name="welcome">Bienvenido</string>
    <string name="start">Empezar</string>
    <string name="not_account">¿No tienes cuenta?, Regístrate</string>

    <!-- Register -->
    <string name="create_account">Crear cuenta</string>

    <!-- Login -->
    <string name="login">Log In</string>
    <string name="welcome_back">¡Hola de nuevo %1$s!</string>
    <string name="no_data">Problemas técnicos, no hay datos</string>

    <!-- Register Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_email">Esta dirección de correo es inválida</string>
    <string name="error_password_is_too_short">La contraseña es muy corta</string>
    <string name="error_invalid_password">La contraseña no cumple todas las condiciones para ser segura</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="error_invalid_user">Ya existe un usuario con ese correo</string>
    <string name="permission_rationale">"El permiso para acceder a los Contactos es necesaerio para
        utilizar el autompletado en el campo del correo  </string>
    <string name="register_completed_message">Welcome %1$s</string>
    <string name="password_help">La contraseña debe contener 5 o más carácteres e incluir letras mayúsculas y minúsculas, y al menos 1 número.</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_show_details">ShowDetailsActivity</string>
    <string name="login_did_fail">Ha ocurrido un error al intentar autentificarse en la aplicación</string>

    <!-- Profile -->
    <string name="log_out">Salir</string>
    <string name="like">Te gustan</string>
    <string name="dislike">No te gustan</string>
    <string name="seen">Capítulos vistos</string>
    <string name="following">Siguiendo</string>
    <string name="watched">Capítulos vistos</string>

    <!-- Episode details -->

    <string name="follow">Seguir</string>
    <string name="emission_date">Fecha de emisión</string>

    <!-- Discover fragment -->

    <string-array name="shows_categories">
        <item>Action</item>
        <item>Adventure</item>
        <item>Anime</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documental</item>
        <item>Drama</item>
        <item>Fantasy</item>
        <item>Romantics</item>
        <item>Science Fiction</item>
        <item>Terror</item>
        <item>Thrillers</item>

    </string-array>

    <string name="No_shows_with_selected_genre">Aún no tenemos series con este género.</string>

    <!-- Delete this -->
    <string name="temp_simpsons_description">Set in Springfield, the average American town, the show focuses on
        the antics and everyday adventures of the Simpson family; Homer,
        Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. Since the beginning,
        the series has been a pop culture icon, attracting hundreds of celebrities to guest star.
        The show has also made name for itself in its fearless satirical take on politics,
        media and American life in general.Set in Springfield, the average American town, the show focuses on
        the antics and everyday adventures of the Simpson family; Homer,
        Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. Since the beginning,
        the series has been a pop culture icon, attracting hundreds of celebrities to guest star.
        The show has also made name for itself in its fearless satirical take on politics,
        media and American life in general.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_episodes">EpisodesActivity</string>
    <string name="title_activity_episode">EpisodeActivity</string>
</resources>
