<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Module.Main.Views.MainActivity">

    <item
        android:id="@+id/action_watching"
        android:enabled="true"
        android:icon="@drawable/ic_eye"
        android:title="@string/upcoming"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@mipmap/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_show"
        android:enabled="true"
        android:icon="@mipmap/ic_show"
        android:title="@string/shows"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@mipmap/ic_face_black"
        android:title="@string/profile" />
</menu>
