<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/userEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="SeriatorName"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_below="@+id/profileImageView"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/userEmailTextView"
            android:background="@android:color/darker_gray"
            android:layout_centerHorizontal="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginRight="1dp"
                >

                <TextView
                    android:id="@+id/followingCounterTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="10"
                    android:textSize="42sp"
                    android:textStyle="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/following"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginRight="1dp"
                >

                <TextView
                    android:id="@+id/likesCounterTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="22"
                    android:textSize="42sp"
                    android:textStyle="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center"
                    android:text="@string/like"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginRight="1dp"
                android:padding="5dp"
                >

                <TextView
                    android:id="@+id/dislikeShowsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="22"
                    android:textSize="42sp"
                    android:textStyle="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center"
                    android:text="@string/dislike"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="5dp"
                >

                <TextView
                    android:id="@+id/watchedEpisodesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="0"
                    android:textSize="42sp"
                    android:textStyle="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center_horizontal"
                    android:text="@string/watched"
                    android:textSize="16sp"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>



        </LinearLayout>

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>